style.css
body {
  font-family: sans-serif;
  background: #0f0f1a;
  color: white;
  text-align: center;
  padding-bottom: 80px;
}

.logo {
  height: 200px;
  padding: 10px;
}

.top-bar {
  position: fixed;
  width: 97%;
  display: flex;
  margin-top: -10px;
  justify-content: space-between;
  padding: 10px;
  background: #1c1c2e;
}

.card {
  margin-top: 0px;
  padding: 20px;
  padding-top: 100px;
}

button {
  background: #531A91;
  color: white;
  border: none;
  padding: 10px 20px;
  margin-top: 20px;
  border-radius: 10px;
  cursor: pointer;
  box-shadow: 0 0 10px #531A91;
}

button:hover {
  box-shadow: 0 0 20px #857535;
}

.glow-click {
  box-shadow: 0 0 15px #857535;
  transform: scale(1.05);
  transition: all 0.2s ease;
}

.hidden {
  display: none;
}

.module {
  opacity: 0;
  transform: scale(0.9);
  transition: all 0.6s ease;
  position: absolute;
  width: 100%;
}

.module.active {
  opacity: 1;
  transform: scale(1);
}

#subModules {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 40px;
}

.orb {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background: radial-gradient(circle, #531A91, black);
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 10px;
  cursor: pointer;
  box-shadow: 0 0 15px #531A91;
  transition: transform 0.3s;
}

.orb:hover {
  transform: scale(1.2);
  box-shadow: 0 0 25px #857535;
}

.wallet-icon {
  width: 24px;
  height: 24px;
}

.footer {
  position: fixed;
  bottom: 0;
  width: 98%;
  background: black;
  display: flex;
  justify-content: space-around;
  padding: 10px 0 calc(20px + env(safe-area-inset-bottom));
  border-top: 1px solid #857535;
  z-index: 100;
}

.footer-item {
  color: #857535;
  font-size: 18px;
  text-align: center;
  cursor: pointer;
}

.footer-item:active {
  color: white;
}

#indicator {
  width: 100px;
  height: 20px;
  padding: 0px;
  margin: 0px;
  color: #531A91;
  align-items: left;
}

